feat: 예약 확정 관련 기능 구현